fixing notch dead space on mobile

--- a/src/styles/components/climbing/climbingLayout.module.scss
+++ b/src/styles/components/climbing/climbingLayout.module.scss
@@ -3,6 +3,10 @@
 .cLayout {
   // min-height: 100vh;
 
+  // padding-top: -10vh;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left);
+
   filter: contrast(100%) brightness(100%);
   background: radial-gradient(
       circle at 60% 50%,
