--- a/src/styles/pages/climbing/cEntry.module.scss
+++ b/src/styles/pages/climbing/cEntry.module.scss
@@ -1,5 +1,25 @@
 .entry {
   max-height: 90vh;
+
+  .images {
+    width: 100%;
+    .eachSlideEffect {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      .image {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+      }
+    }
+  }
+
+  .frontmatter {
+    width: 50%;
+    background-color: red;
+  }
 }
 
 @media (max-width: 1050px) {
@@ -8,5 +28,8 @@
     padding-bottom: 3rem;
 
     max-height: fit-content;
+
+    // .images {
+    // }
   }
 }
